refactoring - try to get away by the Java-20 deprecated URL() constructors